--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header{
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 10px;
+    padding: 10px 40px;
 }
 header figure img {
     height: 100px;
@@ -26,7 +26,7 @@ header figure img {
 
 h1 {
     font-family: 'Raleway', sans-serif;
-    color:#C1D14B;
+    color:white;
 }
 .container-fluid {
     height:100%;
@@ -34,6 +34,7 @@ h1 {
 .row{
     height:100%;
     overflow-y: auto; 
+    height: calc(100% - 116px);
 }
 /* la map doit occuper 100% de la hauteur de son container */
 #map {
@@ -43,20 +44,23 @@ h1 {
     left: 0;
     top: 0;
   }
-.card-img{
-    width: 100%;
-}
+ .card-img{
+    width:175px ;
+    
+} 
 .list{
     padding: 10px;
-    background-color: #716B74;
+    background-color: #C1D14B;
     width: 100%;
     height: 100%;
     overflow-y: auto; /* scrollbar de la liste */
 }
-#dropdownMenu2, .btn {
-    padding: 10px;
-    margin: 10px;
-    height: 100%;
+
+.custom-select, .filter-btn{
+    width:120px;
+    height:50px;
+    padding:10px;
+    margin:10px;
 }
 /* Ajustements de mise en page en fonction de la taille de l'écran */
 /* Small devices & Medium devices (landscape phones, tablets, 768px and less) */
