--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,10 @@ h1 {
 #resetMapBtn, #backToMapBtn{
     position : absolute;
     z-index : 10;
-    left: calc(25% - 75px);
+    left: calc(50% - 75px);
     top : 10 px;
-    width : 150px
-
+    width : 150px;
+    
 }
  .card-img{
     width:175px ;
